fix: yalb(alignment): action banner right in site width

--- a/components/02-molecules/banner/action/_yds-action-banner.scss
+++ b/components/02-molecules/banner/action/_yds-action-banner.scss
@@ -99,6 +99,18 @@ $break-cta-banner-max: $break-cta-banner - 0.05;
     }
   }
 
+  [data-banner-width='site'][data-banner-content-layout='right'] &,
+  [data-banner-width='site'][data-banner-content-layout='left'] & {
+    // prettier-ignore
+    max-width: calc(var(--size-component-layout-width-site) + (var(--size-spacing-10)));
+
+    @media (min-width: $break-cta-banner) {
+      // prettier-ignore
+      max-width: calc(var(--size-component-layout-width-site) + (var(--size-spacing-site-gutter) * 2));
+      margin: 0 auto;
+    }
+  }
+
   &::before {
     position: absolute;
     top: 0;
